test/corpus/types.test
========================
simple bit type definition
========================

bool:bit

------------------------

(source_file
 (type_definition
  (identifier_list
   (identifier))
  (type
   (bit_type))))

========================
multiple bit type definition
========================

bool,boolean:bit

------------------------

(source_file
 (type_definition
  (identifier_list
   (identifier)
   (identifier))
  (type
   (bit_type))))

=========================
simple identifier type definition
=========================

car:vehicle

---------------------

(source_file
 (type_definition
  (identifier_list
   (identifier))
  (type
   (identifier))))

=========================
simple unsigned bit array
=========================

byte:[8]bit

-------------------------

(source_file
 (type_definition
  (identifier_list
   (identifier))
  (type
   (array_type
    (array_size
     (number))
    (type
     (bit_type))))))

=========================
simple signed bit array
=========================

byte:[-8]bit

-------------------------

(source_file
 (type_definition
  (identifier_list
   (identifier))
  (type
   (array_type
    (array_size
     (number))
    (type
     (bit_type))))))


=========================
simple byte array
=========================

byte:[8][8]bit

-------------------------

(source_file
 (type_definition
  (identifier_list
   (identifier))
  (type
   (array_type
    (array_size
     (number))
    (type
     (array_type
      (array_size
       (number))
     (type
      (bit_type))))))))

=========================
simple pointer type definition
=========================

car:*vehicle

---------------------

(source_file
 (type_definition
  (identifier_list
   (identifier))
  (type
   (pointer_type
    (type
     (identifier))))))

=========================
empty struct
=========================

void:
{
}

---------------------

(source_file
 (type_definition
  (identifier_list
   (identifier))
  (type
   (struct_type))))


=========================
simple struct
=========================

thing:
{
    byte:[8]bit
    word:UInt16
}

---------------------

(source_file
 (type_definition
  (identifier_list
   (identifier))
  (type
   (struct_type
    (struct_member
     (identifier_list
      (identifier))
     (type
      (array_type
       (array_size
        (number))
       (type 
        (bit_type)))))
    (struct_member
     (identifier_list
      (identifier))
     (type
      (identifier)))))))

=========================
simple enum
=========================

bool:bit
{
    true:=0
    false:=1
}

---------------------

(source_file
 (type_definition
  (identifier_list
   (identifier))
  (type
   (enum_type
    (type
     (bit_type))
    (enum_member
     (identifier_list
      (identifier))
     (expression
      (number)))
    (enum_member
     (identifier_list
      (identifier))
     (expression
      (number)))))))

=========================
packed struct (alias)
=========================

nibbles:[8]bit
|{
    nibbleTop:[4]bit
    nibbleBottom:[4]bit
}

---------------------

(source_file
 (type_definition
  (identifier_list
   (identifier))
  (type
   (alias_type
    (type
     (array_type
      (array_size
       (number))
      (type
       (bit_type))))
   (struct_member
    (identifier_list
     (identifier))
    (type
     (array_type
      (array_size
       (number))
      (type
       (bit_type)))))
   (struct_member
    (identifier_list
     (identifier))
    (type
     (array_type
      (array_size
       (number))
      (type
       (bit_type)))))))))


=========================
simple void function type
=========================

myvoidfunc:()()

---------------------

(source_file
 (type_definition
  (identifier_list
   (identifier))
  (type
   (function_type
    (input_parameters)
    (output_parameters)))))

=========================
multiple inputs function type
=========================

myvoidfunc:(a:bit,b:bit)()

---------------------

(source_file
 (type_definition
  (identifier_list
   (identifier))
  (type
   (function_type
    (input_parameters
     (type_definition
      (identifier_list
       (identifier))
      (type
       (bit_type)))
     (type_definition
      (identifier_list
       (identifier))
      (type
       (bit_type))))
    (output_parameters)))))

=========================
multiple inputs & outputs function type
=========================

myvoidfunc:(a:bit,b:bit)(result:bit,other:bit)

---------------------

(source_file
 (type_definition
  (identifier_list
   (identifier))
  (type
   (function_type
    (input_parameters
     (type_definition
      (identifier_list
       (identifier))
      (type
       (bit_type)))
     (type_definition
      (identifier_list
       (identifier))
      (type
       (bit_type))))
    (output_parameters
     (type_definition
      (identifier_list
       (identifier))
      (type
       (bit_type)))
     (type_definition
      (identifier_list
       (identifier))
      (type
       (bit_type))))))))

